--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,26 @@ nav {
 /* small tablet styles */
 @media screen and (min-width: 620px) {
 
+    h3 {
+        font-size: 30px;
+        line-height: 50px;
+
+    }
+
+    h1 {
+        font-size: 40px;
+        line-height: 50px;
+
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    .button {
+        font-size: 18px;
+    }
+
     section {
         padding-bottom: 100px;
     }
@@ -450,6 +470,19 @@ nav {
 
     /* desktop styles */
     @media screen and (min-width: 1200px) {
+
+        h3 {
+            font-size: 40px;
+            line-height: 60px;
+
+        }
+
+        h1 {
+            font-size: 50px;
+            line-height: 60px;
+
+        }
+
         .section-headline-underline {
             width: 135px;
         }
