--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ section {
 
 }
 
+
+
+
+
 .section-text {
     grid-row: 2;
     grid-column: 2/8;
@@ -161,9 +165,9 @@ p {
 /* buttons */
 
 .button-group {
+    grid-row: 2;
     margin-top: 25px;
     display: grid;
-    /*grid-template-columns: repeat(2, 1fr);*/
     grid-gap: 0.5em;
 }
 
@@ -172,7 +176,6 @@ p {
     grid-column: 2/8;
     margin-top: 25px;
     display: grid;
-    /*grid-template-columns: repeat(2, 1fr);*/
     grid-gap: 0.5em;
 
 }
@@ -201,7 +204,6 @@ p {
     background: #FFFFFF;
     color: #4CBFA4;
     border: 1px solid #4CBFA4;
-
 }
 
 
@@ -242,21 +244,21 @@ footer {
     padding: 10px;
     text-align: center;
 }
-header {
-    margin-top: 100px;
-    height: 100%;
-}
+
 
 #home {
-   min-height: 80vh;
+    padding-top: 28%;
+    min-height: 80vh;
+    margin-bottom: 80px;
 }
 
 #home-img-div {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 2/8;
     text-align: center;
     justify-content: center;
     align-items: center;
+    margin-top: 25px;
 }
 
 #home-img {
@@ -264,7 +266,8 @@ header {
     height: 98%;
 }
 
-.home-text {
+#home-text {
+    grid-row: 1;
     grid-column: 2/8;
     text-align:left;
 }
@@ -319,25 +322,7 @@ nav {
 }
 
 
-/* small tablet styles */
-@media screen and (min-width: 375px) {
 
-    header {
-        margin-top: 125px;
-    }
-
-   /* #home {
-        min-height: 70vh;
-    }
-
-    #about {
-        padding-top: 38% ;
-    }*/
-
-    #home-img-div {
-        margin-top: -150px;
-    }
-}
 
 /* small tablet styles */
 @media screen and (min-width: 620px) {
@@ -367,7 +352,7 @@ nav {
     }
 
     #about {
-        padding-top: 15%;
+        padding-top: 5%;
         padding-bottom: 5%;
 
     }
@@ -540,7 +525,7 @@ nav {
             margin-bottom: 20px;
         }
 
-        .home-text {
+        #home-text {
             grid-column: 2/5;
         }
 
