--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@
 
 section {
     /* Work with padding to ensure to link so the start of a section on button click */
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 
 }
 
@@ -78,7 +78,7 @@ h1 {
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
-    line-height: 45px;
+    line-height: 32px;
     color: #8E74FF;
 }
 
@@ -321,19 +321,23 @@ nav {
     margin-bottom: 25px;
 }
 
+#about {
+    padding-top: 20%;
+}
+
 
 
 
 /* small tablet styles */
 @media screen and (min-width: 620px) {
 
-    header {
-        margin-top: 225px;
+   header {
+        margin-top: 65px;
     }
 
     h3 {
         font-size: 30px;
-        line-height: 50px;
+        line-height: 40px;
 
     }
 
@@ -352,14 +356,9 @@ nav {
     }
 
     #about {
-        padding-top: 5%;
+        padding-top: 15%;
         padding-bottom: 5%;
 
-    }
-
-    section {
-        padding-top: 5%;
-        padding-bottom: 5%;
     }
 
 
@@ -430,13 +429,19 @@ nav {
     }
 
     #contact-img-div {
-        grid-row: 4;
+        grid-row: 2;
         grid-column: 5/8;
-        margin: 0;
+        margin-top: -38px;
     }
+
+    #contact-img {
+        width: 190px;
+        height: 189px;
+    }
+
     #button-div {
         grid-column: 2/5;
-
+        margin: 0;
     }
 
     .button-group {
@@ -454,6 +459,15 @@ nav {
         grid-row: 1;
     }
 
+    #home {
+        padding-top: 20%;
+    }
+
+
+    #contact-btn {
+        grid-row: 3;
+
+    }
     /* large tablets & laptop styles */
     @media screen and (min-width: 960px)  {
 
