--- a/css/style.css
+++ b/css/style.css
@@ -271,10 +271,15 @@ footer {
 }
 
 
+header {
+    margin-top: 100px;
+    height: 100%;
+    padding-bottom: 50px;
+    margin-bottom: 45px;
+}
+
 #home {
-    padding-top: 28%;
-    min-height: 80vh;
-    margin-bottom: 85px;
+    min-height: 75vh;
 }
 
 #home-img-div {
@@ -369,9 +374,6 @@ nav {
 /* small tablet styles */
 @media screen and (min-width: 620px) {
 
-   header {
-        margin-top: 65px;
-    }
 
     h3 {
         font-size: 30px;
@@ -497,10 +499,6 @@ nav {
         grid-row: 1;
     }
 
-    #home {
-        padding-top: 20%;
-    }
-
 
     #contact-btn {
         grid-row: 3;
@@ -534,6 +532,13 @@ nav {
 
     #contact {
         padding-bottom: 10%;
+    }
+
+    header {
+        margin-top: 150px;
+        padding-bottom: 20px;
+        margin-bottom: 60px;
+
     }
 
     /* large tablets & laptop styles */
@@ -589,7 +594,10 @@ nav {
     @media screen and (min-width: 1200px) {
 
         header {
-            margin-top: 20px;
+            margin-top: 300px;
+            padding-bottom: 20px;
+            margin-bottom: 60px;
+
         }
 
         h3 {
@@ -639,7 +647,7 @@ nav {
            /* height: 100%;
             width: 100%;*/
             grid-column: 5/8;
-            margin-top: -380px;
+            margin-top: -480px;
         }
 
         #home-img {
