--- a/css/style.css
+++ b/css/style.css
@@ -289,11 +289,15 @@ header {
     justify-content: center;
     align-items: center;
     margin-top: 25px;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 #home-img {
     width: 98%; /* prevent image scrolling by not setting size to 100% */
     height: 98%;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 #home-text {
@@ -647,11 +651,12 @@ nav {
            /* height: 100%;
             width: 100%;*/
             grid-column: 5/8;
-            margin-top: -480px;
+            margin-top: -450px;
         }
 
         #home-img {
             width: 100%;
+            max-width: 700px;
             height: auto;
         }
 
