--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,17 @@ section {
     src: url('../assets/fonts/Roboto-Black.ttf');
 }
 
+@font-face {
+    font-family: 'Manrope';
+    src: url('../assets/fonts/Manrope/static/Manrope-ExtraBold.ttf');
+}
+
+
 
 h3 {
 
-    font-family: Roboto;
+    font-family: "Manrope";
     font-style: normal;
-    font-weight: 900;
     font-size: 22px;
     line-height: 30px;
     color: #8E74FF;
@@ -73,18 +78,16 @@ h3 {
 }
 
 h1 {
-    font-family: Roboto;
+    font-family: "Manrope";
     font-style: normal;
-    font-weight: bold;
     font-size: 28px;
     line-height: 32px;
     color: #8E74FF;
 }
 
 h2 {
-    font-family: Roboto;
+    font-family: "Manrope";
     font-style: normal;
-    font-weight: 900;
     font-size: 40px;
     line-height: 40px;
     color: #8E74FF;
@@ -203,9 +206,8 @@ li::before {content: "•"; color: #6D55D6; display: inline-block; width: 1em;
 /* TODO Create class button */
 
 .button {
-    font-family: Roboto;
+    font-family: "Manrope";
     font-style: normal;
-    font-weight: bold;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -599,9 +601,17 @@ nav {
 
         header {
             margin-top: 300px;
-            padding-bottom: 20px;
-            margin-bottom: 60px;
+            padding: 0;
+            margin-bottom: 0;
 
+        }
+
+        #home {
+            min-height: 60vh;
+        }
+
+        #about {
+            padding-top: 5%;
         }
 
         h3 {
@@ -643,19 +653,19 @@ nav {
         }*/
 
         #home-text {
-            grid-column: 2/4;
+            grid-column: 2/5;
         }
 
         #home-img-div {
-            grid-row: 2;
+            grid-row: 1;
            /* height: 100%;
             width: 100%;*/
             grid-column: 5/8;
-            margin-top: -450px;
+            margin-top: -1px;
         }
 
         #home-img {
-            width: 100%;
+            width: 90%;
             max-width: 700px;
             height: auto;
         }
