--- a/css/style.css
+++ b/css/style.css
@@ -601,7 +601,7 @@ nav {
         header {
             margin-top: 300px;
             padding: 0;
-            margin-bottom: 0;
+            margin-bottom: 20px;
 
         }
 
